# uk-income-tax-freeze-app

./: .gitignore  Dockerfile  README.md  test.ipynb
.github/workflows/: build-deploy.yml
backend/: README.md  main.py  pyproject.toml
backend/app/: main.py
backend/app/api/: calculator.py  models.py  routes.py
backend/tests/: test_calculator.py
frontend/: eslint.config.mjs  next.config.js  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/styles/: colors.ts  fonts.ts  theme.ts
terraform/: main.tf  variables.tf
