[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uk-income-tax-freeze-app-backend"
version = "0.1.0"
description = "Backend API for UK income tax freeze analysis"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "policyengine-uk>=2.22.0",
    "numpy>=1.26.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.pytest]
testpaths = ["tests"]